fix: remove whitespaces

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body{
-    background-color: antiquewhite;
-}
+body{background-color:antiquewhite;}
 
-h1{
-    font-size: 1rem;
-}
+h1{font-size:1rem;}
